--- a/View/Master/PortalTemplate.html.twig
+++ b/View/Master/PortalTemplate.html.twig
@@ -92,7 +92,7 @@
         {% block messages %}
             <div class="container">
                 <div class="columns">
-                    <div class="column col-12">
+                    <div class="column col-12 mb-2">
                         {{ Macros.message(log, ['error', 'critical', 'alert', 'emergency'], 'error') }}
                         {{ Macros.message(log, ['warning'], 'warning') }}
                         {{ Macros.message(log, ['notice'], 'success') }}
