Improved smartphone support.

--- a/View/Master/SectionController.html.twig
+++ b/View/Master/SectionController.html.twig
@@ -70,26 +70,58 @@
 {% endblock %}
 
 {% macro sectionsButtons(fsc, i18n) %}
-    <ul class="menu mb-2">
+    <div class="hide-md">
         {% for name, group in fsc.getSectionGroups() %}
-            {% if name != '' %}
-                <li class="divider text-center" data-content="{{ i18n.trans(name) }}">
-                </li>
-            {% endif %}
-            {% for sectionName, section in group %}
-                {% set tabClass = (sectionName == fsc.active) ? 'active' : '' %}
-                <li class="menu-item">
-                    {% if section.count > 0 %}
-                        <div class="menu-badge">
-                            <label class="label label-primary">{{ section.count }}</label>
-                        </div>
-                    {% endif %}
-                    <a href="#" id="secBtn{{ sectionName }}2" class="section-tab {{ tabClass }}" onclick="return showSection('{{ sectionName }}');">
-                        <i class="{{ section.icon }} fa-fw" aria-hidden="true"></i>
-                        {{ section.title }}
-                    </a>
-                </li>
-            {% endfor %}
+            <ul class="menu mb-2">
+                {% if name != '' %}
+                    <li class="divider text-center" data-content="{{ i18n.trans(name) }}">
+                    </li>
+                {% endif %}
+                {% for sectionName, section in group %}
+                    {% set tabClass = (sectionName == fsc.active) ? 'active' : '' %}
+                    <li class="menu-item">
+                        {% if section.count > 0 %}
+                            <div class="menu-badge">
+                                <label class="label label-primary">{{ section.count }}</label>
+                            </div>
+                        {% endif %}
+                        <a href="#" id="secBtn{{ sectionName }}" class="section-tab {{ tabClass }}" onclick="return showSection('{{ sectionName }}');">
+                            <i class="{{ section.icon }} fa-fw" aria-hidden="true"></i>
+                            {{ section.title }}
+                        </a>
+                    </li>
+                {% endfor %}
+            </ul>
         {% endfor %}
-    </ul>
+    </div>
+    {# -- Smartphone section dropdown -- #}
+    <div class="dropdown show-md mb-2">
+        <div class="btn-group">
+            <a href="#" class="btn dropdown-toggle" tabindex="0">
+                <i class="fas fa-chevron-circle-down fa-fw"></i> {{ i18n.trans('sections') }}
+            </a>
+            <ul class="menu">
+                {% for name, group in fsc.getSectionGroups() %}
+                    {% if name != '' %}
+                        <li class="divider text-center" data-content="{{ i18n.trans(name) }}">
+                        </li>
+                    {% endif %}
+                    {% for sectionName, section in group %}
+                        {% set tabClass = (sectionName == fsc.active) ? 'active' : '' %}
+                        <li class="menu-item">
+                            {% if section.count > 0 %}
+                                <div class="menu-badge">
+                                    <label class="label label-primary">{{ section.count }}</label>
+                                </div>
+                            {% endif %}
+                            <a href="#" id="secBtn{{ sectionName }}2" class="section-tab {{ tabClass }}" onclick="return showSection('{{ sectionName }}');">
+                                <i class="{{ section.icon }} fa-fw" aria-hidden="true"></i>
+                                {{ section.title }}
+                            </a>
+                        </li>
+                    {% endfor %}
+                {% endfor %}
+            </ul>
+        </div>
+    </div>
 {% endmacro %}
