--- a/View/Master/PortalTemplate.html.twig
+++ b/View/Master/PortalTemplate.html.twig
@@ -30,15 +30,11 @@
         {{ debugBarRender.renderHead()|raw }}
     </head>
     <body>
+        {% import 'Macro/PortalTemplate.html.twig' as Macros %}
         {% block navbar %}
             <header class="navbar navbar-top">
                 <section class="navbar-section hide-xs">
-                    {% for menuItem in fsc.getPublicMenu() %}
-                        {% set activeClass = (menuItem.idpage == fsc.webPage.idpage) ? '' : ' btn-link' %}
-                        <a class="btn{{ activeClass }}" href="{{ menuItem.url('public') | raw }}">
-                            {{ menuItem.shorttitle }}
-                        </a>
-                    {% endfor %}
+                    {{ Macros.TopMenu(fsc) }}
                 </section>
                 <section class="navbar-center">
                     <div class="dropdown show-xs">
@@ -46,7 +42,7 @@
                             <i class="fas fa-bars fa-fw" aria-hidden="true"></i> {{ i18n.trans('menu') }}
                         </a>
                         <ul class="menu">
-                            {% for menuItem in fsc.getPublicMenu() %}
+                            {% for menuItem in fsc.menuComposer.getTopMenu() %}
                                 {% set activeClass = (menuItem.idpage == fsc.webPage.idpage) ? 'active' : '' %}
                                 <li class="menu-item">
                                     <a class="{{ activeClass }}" href="{{ menuItem.url('public') | raw }}">
@@ -88,7 +84,6 @@
             </header>
             <div class="divider text-center" data-content="{{ webTitle }}"></div>
         {% endblock %}
-        {% import 'Macro/PortalTemplate.html.twig' as Macros %}
         {% block messages %}
             <div class="container">
                 <div class="columns">
@@ -97,7 +92,7 @@
                         {{ Macros.message(log, ['warning'], 'warning') }}
                         {{ Macros.message(log, ['notice'], 'success') }}
                         {{ Macros.message(log, ['info'], 'primary') }}
-                        {% if fsc.showCookiesPolicy %}{{ Macros.cookiesMessage(i18n, fsc.cookiesPage()) }}{% endif %}
+                        {% if fsc.showCookiesPolicy %}{{ Macros.cookiesMessage(i18n, fsc.menuComposer.cookiesPage()) }}{% endif %}
                     </div>
                 </div>
             </div>
@@ -125,13 +120,13 @@
                             {% for block in fsc.pageComposer.getBlocks('footer') %}
                                 {{ block.content() | raw }}
                             {% endfor %}
-                            {% for key, menuItem in fsc.getPublicFooter() %}
+                            {% for key, menuItem in fsc.menuComposer.getFooterMenu() %}
                                 {% set activeClass = (menuItem.idpage == fsc.webPage.idpage) ? '' : ' btn-link' %}
                                 <a href="{{ menuItem.url('public') | raw }}" class="btn{{ activeClass }}">{{ menuItem.shorttitle }}</a>
                             {% endfor %}
                         </div>
                         <div class="column text-right">
-                            {% for key, menuItem in fsc.getLanguageRoots() %}
+                            {% for key, menuItem in fsc.menuComposer.getLanguageRoots() %}
                                 {% if menuItem.langcode == fsc.webPage.langcode %}
                                     <b>{{ menuItem.langcode }}</b>
                                 {% else %}
