- Added template to fix first section on top on section controller. - Fixed EditProfile controller. - More improvements.

--- a/View/Macro/PortalTemplate.html.twig
+++ b/View/Macro/PortalTemplate.html.twig
@@ -156,7 +156,7 @@
                     </a>
                     <div class="divider"></div>
                     <a href="{{ constant('FS_ROUTE') }}/?public_logout=TRUE" class="btn btn-block btn-error">
-                        <i class="fas fa-sign-out fa-fw" aria-hidden="true"></i> {{ i18n.trans('logout') }}
+                        <i class="fas fa-sign-out-alt fa-fw" aria-hidden="true"></i> {{ i18n.trans('logout') }}
                     </a>
                 </div>
             </div>
