--- a/View/Master/SectionController.html.twig
+++ b/View/Master/SectionController.html.twig
@@ -66,6 +66,25 @@
             $("#secForm" + name).submit();
             return false;
         }
+        $(document).ready(function () {
+            $(".clickableRow").mousedown(function (event) {
+                if (event.which === 1) {
+                    var href = $(this).attr("data-href");
+                    var target = $(this).attr("data-target");
+                    if (typeof href !== typeof undefined && href !== false) {
+                        if (typeof target !== typeof undefined && target === "_blank") {
+                            window.open($(this).attr("data-href"));
+                        } else {
+                            parent.document.location = $(this).attr("data-href");
+                        }
+                    }
+                }
+            });
+            $(".cancelClickable").mousedown(function (event) {
+                event.preventDefault();
+                event.stopPropagation();
+            });
+        });
     </script>
 {% endblock %}
 
