--- a/View/Master/SectionController.html.twig
+++ b/View/Master/SectionController.html.twig
@@ -46,7 +46,6 @@
 
 {% block javascripts %}
     {{ parent() }}
-    <script src="{{ asset('node_modules/jquery/dist/jquery.min.js') }}"></script>
     <script type="text/javascript">
         function showSection(name) {
             $(".section-btn").removeClass("btn-primary");
@@ -82,6 +81,15 @@
             $(".cancelClickable").mousedown(function (event) {
                 event.preventDefault();
                 event.stopPropagation();
+            });
+            $(".datepicker").datepicker({
+                dateFormat: "dd-mm-yy",
+                firstDay: 1,
+                beforeShow: function () {
+                    setTimeout(function () {
+                        $(".ui-datepicker").css("z-index", 99999999999999);
+                    }, 0);
+                }
             });
         });
     </script>
