--- a/View/Master/SectionControllerFixed.html.twig
+++ b/View/Master/SectionControllerFixed.html.twig
@@ -16,10 +16,10 @@
         <div class="container">
             <div class="columns">
                 <div class="column">
+                    {# -- Options button -- #}
                     {% if fsc.user %}
-                        {# -- Options button -- #}
                         <div class="dropdown">
-                            <a href="#" class="btn dropdown-toggle">
+                            <a href="#" class="btn btn-link dropdown-toggle">
                                 <i class="fas fa-wrench fa-fw" aria-hidden="true"></i> {{ i18n.trans('options') }}
                             </a>
                             <ul class="menu">
@@ -32,9 +32,8 @@
                                 {% endfor %}
                             </ul>
                         </div>
-                        <br/>
-                        <br/>
                     {% endif %}
+
                     {# -- Section selector -- #}
                     {% if fsc.sections | length > 1 %}
                         {{ macros.sectionsButtons(fsc, i18n, firstSectionName) }}
